--- a/public/src/index.html
+++ b/public/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>管理系统登录</title>
     <link rel="stylesheet" href="/assets/styles/main.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico">
   </head>
   <body>
     <div id="app"></div>
